chore: change Repository to GitRepository
